# Pollaris-Contract

./: .gitignore  CMakeLists.txt  README.md  pollaris-contract.Dockerfile  tags.md
BAL/: ABI Tips.md  CMakeLists.txt  DevEnv.md  README.md  Tutorial.md
BAL/BAL/: BAL.hpp  Declarations.hpp  Dispatcher.hpp  FcSerialization.hpp  ID.hpp  IO.hpp  IndexHelpers.hpp  Main.hpp  Name.hpp  Reflect.hpp  SerializeVariant.hpp  Table.hpp  Types.hpp
BAL/BAL/BAL_EOSIO/: BAL.hpp  SerializeVariant.hpp  Table.hpp  Types.hpp
BAL/BAL/BAL_Leap/: BAL.hpp  IndexHelpers.hpp  SerializeVariant.hpp  Table.hpp  Types.hpp
BAL/BAL/BAL_Peerplays/: BAL.hpp  Dispatcher.hpp  FcSerialization.hpp  IndexHelpers.hpp  Table.hpp  Types.hpp
BAL/EOSIO/: CMakeLists.txt
BAL/Leap/: CMakeLists.txt
BAL/Peerplays/: CMakeLists.txt
BAL/Utils/: Reflect.hpp  StaticVariant.hpp  TypeList.hpp
Contract/: Main.cpp  Pollaris.cpp  Pollaris.hpp  PollarisTests.cpp
Spec/: Pollaris Tables.drawio  README.md  TLS-PSK_First-Time_Handshake_Voter.txt  TLS-PSK_Standard_Handshake.txt
Tests/: BAL_Tests.cpp  BAL_Tests.hpp  CMakeLists.txt  eosio.Dockerfile  eosio.cdt.Dockerfile  logging.json  main.cpp  test-eosio.sh  test-peerplays.sh  tests-only.abi
